--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,18 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^1.3.2
+
+flutter_icons:
+  android: true
+  image_path: "div_assets/logo.png"
+
+flutter_native_splash:
+  color: "#FFC61F"
+  image: "div_assets/logo.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
